--- a/electron/package.json
+++ b/electron/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "kanokeep",
-  "version": "1.0.0",
-  "description": "小鹿记账❤️",
-  "main": "index.js",
+  "name": "kanokeep-electron",
+  "version": "0.0.0",
+  "description": "小鹿记账-electron",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
