--- a/electron/package.json
+++ b/electron/package.json
@@ -4,7 +4,7 @@
   "description": "小鹿记账-electron",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/VanVodkaer/KanoKeep/issues"
   },
-  "homepage": "https://github.com/VanVodkaer/KanoKeep#readme"
+  "homepage": "https://github.com/VanVodkaer/KanoKeep#readme",
+  "dependencies": {
+    "electron": "^30.0.1"
+  }
 }
